env file updated

--- a/backend/server/.env
+++ b/backend/server/.env
@@ -1,1 +1,5 @@
+PORT = 3000
 MONGODB_URI='mongodb+srv://kallolbhattacharyya2022:QeFOEY1RcZykZzKk@zidioproj.b5f0ctf.mongodb.net'
+
+# ADD it
+JWT_SECRET = 
