--- a/backend/server/.env
+++ b/backend/server/.env
@@ -1,1 +1,3 @@
 MONGODB_URI='mongodb+srv://kallolbhattacharyya2022:QeFOEY1RcZykZzKk@zidioproj.b5f0ctf.mongodb.net'
+JWT_SECRET='secret#text'
+NODE_ENV='development'
